Update some jquery and css effects plus added pages back into the routes

--- a/app/assets/stylesheets/myitcrm.css
+++ b/app/assets/stylesheets/myitcrm.css
@@ -1,7 +1,7 @@
 /*Layout*/
 body {min-width:960px;height:auto;margin:0.9px;padding:0;border:0;vertical-align:baseline;}
 #header {text-align:center; padding-bottom:2px;}
-#container {padding: 5px 20px 5px 20px;}
+#container {padding: 0 20px 0 20px;}
 #conatiner a {color: #0000FF;}
 #yield {margin: 0 auto;}
 #center_col {margin: 0 18em 0 18em; padding:0 15px 15px 15px;}
@@ -81,13 +81,13 @@ h6 {font-family: Consolas, Helvetica, Arial,fantasy;font-size: 12px;}
     .module ul li a{width:100%;}
     .module ul li a{display: inline-block;}
     .module li:hover {background-color:#a9a9a9;font-weight:bold;padding-left:25px;-moz-border-radius:10px;-webkit-border-radius:10px}
-.menu_module {background-color:#c3c2bf;border-radius:0 0 10px 10px;padding:0 5px 5px 38px;overflow:hidden;text-align:left !important;margin-bottom:15px;}
-    .menu_module h2 {background-color:#820a0a;color:#ffffff !important;text-align:center;text-transform:uppercase;}
-    .menu_module a {color:#666666;text-decoration:none;}
-    .menu_module ul {margin:10px 0 10px -35px;}
-    .menu_module li {padding-left:10px;font-size:1.2em;line-height:1.5em;display:list-item;list-style-image:url(bullet_right.png);}
-    .menu_module li:hover {list-style-image:url(bullet_hover.png);background-color:#a9a9a9;font-weight:bold;padding-left:10px;-moz-border-radius:10px;-webkit-border-radius:10px}
-    .menu_module li a.selected {list-style-image:url(/bullet_hover.png);background-color:#a9a9a9;font-weight:bold;padding-left:10px;-moz-border-radius:10px;-webkit-border-radius:10px}
+.module_menu {background-color:#c3c2bf;border-radius:0 0 10px 10px;padding:0 5px 5px 38px;overflow:hidden;text-align:left !important;margin-bottom:15px;}
+    .module_menu h2 {background-color:#820a0a;color:#ffffff !important;text-align:center;text-transform:uppercase;}
+    .module_menu a {color:#666666;text-decoration:none;}
+    .module_menu ul {margin:10px 0 10px -35px;}
+    .module_menu li {padding-left:10px;font-size:1.2em;line-height:1.5em;display:list-item;list-style-image:url(bullet_right.png);}
+    .module_menu li:hover {list-style-image:url(bullet_hover.png);background-color:#a9a9a9;font-weight:bold;padding-left:10px;-moz-border-radius:10px;-webkit-border-radius:10px}
+    .module_menu li a.selected {list-style-image:url(/bullet_hover.png);background-color:#a9a9a9;font-weight:bold;padding-left:10px;-moz-border-radius:10px;-webkit-border-radius:10px}
 
 .clear {clear:both;height: 0;overflow: hidden;margin-bottom:0.5em;padding-top:20px;}
 .hide {display:none !important ;}
@@ -118,7 +118,7 @@ h6 {font-family: Consolas, Helvetica, Arial,fantasy;font-size: 12px;}
 
 /*Menu */
 #menu_tabs { margin: 0 auto;}
-#menu{width:100%;height:30px;background-color:black;font: bold 10px Verdana;padding: 0;}
+#menu{width:100%;height:31px;background-color:black;font: bold 11px Tahoma;padding: 0;}
 
 #menu ul{margin: 0;padding: 0;list-style-type: none;}
 #menu li{float: left;position: relative;display: inline-block;z-index: 2; }
@@ -372,6 +372,58 @@ label {display: block;margin-bottom:6px;}
 /*Footer Styling*/
 #footer {width:100%; float:left; text-align: center; padding: 4px 0;color:#b5b2b2;}
 #footer a {color:#b5b2b2;font-size:x-small;}
+
+a.button, a:link.button, a:visited.button, input[type=submit] {
+  background: #838a90;
+  background: -webkit-gradient(linear, left top, left bottom, from(#838a90), to(#414549));
+  background: -moz-linear-gradient(-90deg, #838a90, #414549);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#838a90, endColorstr=#414549);
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#838a90, endColorstr=#414549);
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
+  text-shadow: black 0 1px 0;
+  -webkit-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(255, 255, 255, 0.2) inset;
+  -moz-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(255, 255, 255, 0.2) inset;
+  -ms-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(255, 255, 255, 0.2) inset;
+  -o-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(255, 255, 255, 0.2) inset;
+  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(255, 255, 255, 0.2) inset;
+  border: solid 1px #484e53;
+  border-color: #484e53;
+  border-top-color: #616a71;
+  border-right-color: #484e53;
+  border-bottom-color: #363b3f;
+  border-left-color: #484e53;
+  color: #efefef;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 1.0em;
+  font-family: Helvetica, Arial, sans-serif;
+  line-height: 12px;
+  margin-right: 3px;
+  padding: 7px 16px 6px;
+  text-decoration: none;
+  -webkit-font-smoothing: antialiased; }
+  a.button:hover, a:link.button:hover, a:visited.button:hover, input[type=submit]:hover {
+    color: #FFF;
+    background: #8b9297;
+    background: -webkit-gradient(linear, left top, left bottom, from(#8b9297), to(#484d51));
+    background: -moz-linear-gradient(-90deg, #8b9297, #484d51);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#8b9297, endColorstr=#484d51);
+    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#8b9297, endColorstr=#484d51); }
+    a.button:hover span.icon svg path, a.button:hover span.icon svg polygon, a.button:hover span.icon svg rect, a.button:hover span.icon svg circle, a:link.button:hover span.icon svg path, a:link.button:hover span.icon svg polygon, a:link.button:hover span.icon svg rect, a:link.button:hover span.icon svg circle, a:visited.button:hover span.icon svg path, a:visited.button:hover span.icon svg polygon, a:visited.button:hover span.icon svg rect, a:visited.button:hover span.icon svg circle, input[type=submit]:hover span.icon svg path, input[type=submit]:hover span.icon svg polygon, input[type=submit]:hover span.icon svg rect, input[type=submit]:hover span.icon svg circle {
+      fill: white !important; }
+  a.button:active, a:link.button:active, a:visited.button:active, input[type=submit]:active {
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4) inset, 0 1px 0 0px white;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4) inset, 0 1px 0 0px white;
+    -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4) inset, 0 1px 0 0px white;
+    -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4) inset, 0 1px 0 0px white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4) inset, 0 1px 0 0px white;
+    background: #7e858b;
+    background: -webkit-gradient(linear, left top, left bottom, from(#7e858b), to(#3c4043));
+    background: -moz-linear-gradient(-90deg, #7e858b, #3c4043);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7e858b, endColorstr=#3c4043);
+    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7e858b, endColorstr=#3c4043); }
 
 /* ARE THESE USED ???????*/
 /*
