--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -51,7 +51,7 @@
     <div class="center">
       <input type="submit" value="Add a Reply" id="button" class="add_comment" />
     </div>
-  <div id="effect">
+  <div id="effect" style="display:none;">
      <h3 align="left">Leave a Reply</h3>
      <%= render :partial => 'replies/form' %>
   </div>
