--- a/app/views/layouts/_left_sidebar_modules.erb
+++ b/app/views/layouts/_left_sidebar_modules.erb
@@ -1,7 +1,7 @@
 <div id="sidebar_left">
   <% if not logged_in? %>
       <%= module_header(t "global.module.menu") %>
-            <div class="menu_module">
+            <div class="module_menu">
                 <ul>
                   <li><%= link_to 'Home', root_url %></li>
                    <li><%= link_to 'Login', login_url %></li>
