--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -48,8 +48,8 @@
       <div class="html_area"><%= markdown(@work_order.description) %> </div>
     </div>
      <% if not @work_order.closed %>
-    <div class="center">
-      <input type="submit" value="Add a Reply" id="button" class="add_comment" />
+    <div>
+      <input type="submit" value="Add a Reply" id="button"  />
     </div>
   <div id="effect" style="display:none;">
      <h3 align="left">Leave a Reply</h3>
