--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -48,7 +48,7 @@
       <div class="html_area"><%= markdown(@work_order.description) %> </div>
     </div>
      <% if not @work_order.closed %>
-    <div>
+    <div class="centered_text">
       <input type="submit" value="Add a Reply" id="button"  />
     </div>
   <div id="effect" style="display:none;">
