--- a/app/views/invoices/_product_invoice_line.erb
+++ b/app/views/invoices/_product_invoice_line.erb
@@ -1,7 +1,9 @@
+<div class="fields">
+  <p>
+    <div class="inline centered_text"><%= f.number_field :qty, :style => "width:50px" %></div>
+        <div class="inline w430"><%= f.collection_select :product_id, Product.where("active = ?", true).order('description'), :id, :product_lookup, :include_blank => true %></div>
+        <div class="inline"><%= f.text_field :line_comment, :size => 50 %></div>
+        <div class="inline centered_text"><%= link_to_remove_fields f %></div>
 
-<tr align="center" class=" <%= cycle :odd, :even %> fields">
-  <td><%= f.number_field :qty, :size => 2 %></td>
-  <td align="left"><%= f.collection_select :product_id, Product.where("active = ?", true).order('description'), :id, :product_lookup, :include_blank => true %></td>
-  <td align="left"><%= f.text_field :line_comment, :size => 50  %></td>
-  <td><%= link_to_remove_fields f %></td>
-</tr>
+  </p>
+    </div>
