--- a/app/views/service_rates/_form.html.erb
+++ b/app/views/service_rates/_form.html.erb
@@ -1,3 +1,10 @@
+<div id="ddtabs1" class="basictab" >
+  <ul>
+  <li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
+  </ul>
+  </div>
+  <div class="tabcontainer">
+  <div id="sc1" class="tabcontent">
     <%= simple_form_for(@service_rate) do |f| %>
       <%= f.error_notification %>
 
@@ -25,3 +32,6 @@
         <%= f.button :submit %>
       </div>
     <% end %>
+  </div>
+
+  </div>
