--- a/app/views/service_rates/show.html.erb
+++ b/app/views/service_rates/show.html.erb
@@ -54,7 +54,7 @@
     <table>
       <tr>
         <td  >
-          <h1><%= t "products.t_log" %></h1>
+          <h1><%= t "global.transaction_log" %></h1>
         </td>
       </tr>
       <tr>
@@ -78,15 +78,6 @@
       </tr>
     </table>
   </fieldset>
-</div>
-<div id="tab2" class="tabcontent">
-
-</div>
-<div id="tab3" class="tabcontent">
-
-</div>
-<div id="tab4" class="tabcontent">
-
 </div>
 </div>
 </div>
