--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,8 @@
           <div class="module">
            <ul>
             <li class="create"><%= link_to  "New", new_user_path %></li>
+            <li class="view"><%= link_to  t("global.employees"), employees_path %></li>
+            <li class="view"><%= link_to  t("global.clients"), clients_path %></li>
             <li class="back"><%= link_to t("global.back"), :back %></li>
            </ul>
           </div>
