--- a/app/views/layouts/_left_sidebar_modules.erb
+++ b/app/views/layouts/_left_sidebar_modules.erb
@@ -49,7 +49,7 @@
                   </div>
 
                   <% end %>
-                  <% if current_user.client == true %>
+                  <% if current_user.client? %>
                      <div id="my_overview">
                         <h5> Work Orders </h5>
                     <div class="col_name">
@@ -77,7 +77,7 @@
                   <% end %>
                 </p>
               </div>
-      <% if current_user.client %>
+      <% if current_user.client? %>
             <%= module_header(t "global.module.contact_us" ) %>
           <div class="module">
                        <p>
