--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for([@work_order,@reply]) do |f| %>
     <%= f.input :content,:label => (t 'reply.message')  , :input_html => { :rows => 6 } %>
     <%= f.input :private, :label => (t 'reply.internal'), :hint => (t 'reply.internal_hint') if current_user.employee? %>
-
+    <%= f.input :work_order_id, :as => :hidden %>
     <div class="center">
-       <%= f.submit "Post Reply now" %>
+       <%= f.submit "Post Message" %>
     </div>
 <% end %>
