--- a/app/views/service_rates/edit.html.erb
+++ b/app/views/service_rates/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing service_rate</h1>
+<div id="sidebar_left">
+  <%= module_header %>
+  <div class="module">
+    <ul>
+        <li class="exit"><%= link_to (t "global.exit"), service_rates_path %></li>
+    </ul>
+  </div>
+  <%= render 'layouts/left_sidebar_modules' %>
+</div>
+<div id="center_col">
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @service_rate %> |
-<%= link_to 'Back', service_rates_path %>
+</div>
+
